First draft for setting up compute cluster and hyperdrive experiment

--- a/udacity-project.ipynb
+++ b/udacity-project.ipynb
@@ -2,13 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "gather": {
      "logged": 1598275788035
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Workspace name: quick-starts-ws-186266\n",
+      "Azure region: southcentralus\n",
+      "Subscription id: 61c5c3f0-6dc7-4ed9-a7f3-c704b20e3b30\n",
+      "Resource group: aml-quickstarts-186266\n"
+     ]
+    }
+   ],
    "source": [
     "from azureml.core import Workspace, Experiment\n",
     "\n",
@@ -25,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "gather": {
      "logged": 1598275788675
@@ -40,17 +51,47 @@
      }
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'amlcompute_cluster_name' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mComputeTargetException\u001b[0m                    Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [2]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m---> 15\u001b[0m     aml_compute \u001b[38;5;241m=\u001b[39m \u001b[43mComputeTarget\u001b[49m\u001b[43m(\u001b[49m\u001b[43mworkspace\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mws\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcluster_name\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     16\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFound existing cluster, use it.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "File \u001b[0;32m/anaconda/envs/azureml_py38/lib/python3.8/site-packages/azureml/core/compute/compute.py:90\u001b[0m, in \u001b[0;36mComputeTarget.__new__\u001b[0;34m(cls, workspace, name)\u001b[0m\n\u001b[1;32m     89\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m---> 90\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m ComputeTargetException(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mComputeTargetNotFound: Compute Target with name \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m not found in \u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m     91\u001b[0m                                      \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mprovided workspace\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mformat(name))\n\u001b[1;32m     92\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "\u001b[0;31mComputeTargetException\u001b[0m: ComputeTargetException:\n\tMessage: ComputeTargetNotFound: Compute Target with name ndeg-prj1-clust not found in provided workspace\n\tInnerException None\n\tErrorResponse \n{\n    \"error\": {\n        \"message\": \"ComputeTargetNotFound: Compute Target with name ndeg-prj1-clust not found in provided workspace\"\n    }\n}",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [2]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m ComputeTargetException:\n\u001b[1;32m     18\u001b[0m     compute_config \u001b[38;5;241m=\u001b[39m AmlCompute\u001b[38;5;241m.\u001b[39mprovisioning_configuration(vm_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSTANDARD_D2_V2\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m     19\u001b[0m                                                            max_nodes\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m4\u001b[39m)\n\u001b[0;32m---> 20\u001b[0m     aml_compute \u001b[38;5;241m=\u001b[39m ComputeTarget\u001b[38;5;241m.\u001b[39mcreate(ws, \u001b[43mamlcompute_cluster_name\u001b[49m, compute_config)\n\u001b[1;32m     22\u001b[0m aml_compute\u001b[38;5;241m.\u001b[39mwait_for_completion(show_output\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'amlcompute_cluster_name' is not defined"
+     ]
+    }
+   ],
    "source": [
     "from azureml.core.compute import ComputeTarget, AmlCompute\n",
     "\n",
-    "cluster_name = \"GIVE_A_CLUSTER_NAME\"\n",
+    "cluster_name = \"ndeg-prj1-clust\"\n",
     "\n",
     "# TODO: Create compute cluster\n",
     "# Use vm_size = \"Standard_D2_V2\" in your provisioning configuration.\n",
     "# max_nodes should be no greater than 4.\n",
     "\n",
-    "### YOUR CODE HERE ###"
+    "### YOUR CODE HERE ###\n",
+    "\n",
+    "from azureml.core.compute import ComputeTarget, AmlCompute\n",
+    "from azureml.core.compute_target import ComputeTargetException\n",
+    "\n",
+    "try:\n",
+    "    aml_compute = ComputeTarget(workspace=ws, name=cluster_name)\n",
+    "    print('Found existing cluster, use it.')\n",
+    "except ComputeTargetException:\n",
+    "    compute_config = AmlCompute.provisioning_configuration(vm_size='STANDARD_D2_V2',\n",
+    "                                                           max_nodes=4)\n",
+    "    aml_compute = ComputeTarget.create(ws, cluster_name, compute_config)\n",
+    "\n",
+    "aml_compute.wait_for_completion(show_output=True)"
    ]
   },
   {
@@ -82,11 +123,16 @@
     "from azureml.core import Environment, ScriptRunConfig\n",
     "import os\n",
     "\n",
+    "### YOUR CODE HERE ###\n",
+    "\n",
     "# Specify parameter sampler\n",
-    "ps = ### YOUR CODE HERE ###\n",
+    "ps = RandomParameterSampling( {\n",
+    "    '--C': uniform(0.01, 1.0),\n",
+    "    '--max_iter': choice(100, 200, 500, 1000)\n",
+    "})\n",
     "\n",
     "# Specify a Policy\n",
-    "policy = ### YOUR CODE HERE ###\n",
+    "policy = BanditPolicy(evaluation_interval=2, slack_factor=0.1)\n",
     "\n",
     "if \"training\" not in os.listdir():\n",
     "    os.mkdir(\"./training\")\n",
@@ -95,10 +141,22 @@
     "sklearn_env = Environment.from_conda_specification(name='sklearn-env', file_path='conda_dependencies.yml')\n",
     "\n",
     "# Create a ScriptRunConfig Object to specify the configuration details of your training job\n",
-    "src = ### YOUR CODE HERE ###\n",
+    "src = ScriptRunConfig(\n",
+    "    source_directory=\".\",\n",
+    "    script=\"train.py\",\n",
+    "    #arguments=args,\n",
+    "    compute_target=aml_compute,\n",
+    "    environment=sklearn_env\n",
+    ")\n",
     "\n",
     "# Create a HyperDriveConfig using the src object, hyperparameter sampler, and policy.\n",
-    "hyperdrive_config = ### YOUR CODE HERE ###"
+    "hyperdrive_config = HyperDriveConfig(run_config=src,\n",
+    "    hyperparameter_sampling=ps,\n",
+    "    policy=policy,\n",
+    "    primary_metric_name='r2_score',\n",
+    "    primary_metric_goal=PrimaryMetricGoal.MINIMIZE,\n",
+    "    max_total_runs=20,\n",
+    "    max_concurrent_runs=4)"
    ]
   },
   {
@@ -109,7 +167,9 @@
    "source": [
     "# Submit your hyperdrive run to the experiment and show run details with the widget.\n",
     "\n",
-    "### YOUR CODE HERE ###"
+    "### YOUR CODE HERE ###\n",
+    "run = exp.submit(config=hyperdrive_config)\n",
+    "run.wait_for_completion(show_output=True)"
    ]
   },
   {
@@ -139,9 +199,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['age', 'job', 'marital', 'education', 'default', 'housing', 'loan',\n",
+      "       'contact', 'month', 'day_of_week', 'duration', 'campaign', 'pdays',\n",
+      "       'previous', 'poutcome', 'emp.var.rate', 'cons.price.idx',\n",
+      "       'cons.conf.idx', 'euribor3m', 'nr.employed', 'y'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
    "source": [
     "from azureml.data.dataset_factory import TabularDatasetFactory\n",
     "\n",
@@ -149,7 +221,11 @@
     "# Data is available at: \n",
     "# \"https://automlsamplenotebookdata.blob.core.windows.net/automl-sample-notebook-data/bankmarketing_train.csv\"\n",
     "\n",
-    "### YOUR CODE HERE ###"
+    "### YOUR CODE HERE ###\n",
+    "\n",
+    "ds = TabularDatasetFactory.from_delimited_files('https://automlsamplenotebookdata.blob.core.windows.net/automl-sample-notebook-data/bankmarketing_train.csv')\n",
+    "df = ds.to_pandas_dataframe()\n",
+    "print(df.columns)"
    ]
   },
   {
@@ -263,7 +339,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.1"
   },
   "nteract": {
    "version": "nteract-front-end@1.0.0"
