--- a/udacity-project.ipynb
+++ b/udacity-project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "gather": {
      "logged": 1598275788035
@@ -13,10 +13,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Workspace name: quick-starts-ws-186266\n",
+      "Workspace name: quick-starts-ws-186746\n",
       "Azure region: southcentralus\n",
-      "Subscription id: 61c5c3f0-6dc7-4ed9-a7f3-c704b20e3b30\n",
-      "Resource group: aml-quickstarts-186266\n"
+      "Subscription id: f5091c60-1c3c-430f-8d81-d802f6bf2414\n",
+      "Resource group: aml-quickstarts-186746\n"
      ]
     }
    ],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "gather": {
      "logged": 1598275788675
@@ -53,19 +53,15 @@
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'amlcompute_cluster_name' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mComputeTargetException\u001b[0m                    Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [2]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m---> 15\u001b[0m     aml_compute \u001b[38;5;241m=\u001b[39m \u001b[43mComputeTarget\u001b[49m\u001b[43m(\u001b[49m\u001b[43mworkspace\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mws\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcluster_name\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     16\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFound existing cluster, use it.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "File \u001b[0;32m/anaconda/envs/azureml_py38/lib/python3.8/site-packages/azureml/core/compute/compute.py:90\u001b[0m, in \u001b[0;36mComputeTarget.__new__\u001b[0;34m(cls, workspace, name)\u001b[0m\n\u001b[1;32m     89\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m---> 90\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m ComputeTargetException(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mComputeTargetNotFound: Compute Target with name \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m not found in \u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m     91\u001b[0m                                      \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mprovided workspace\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mformat(name))\n\u001b[1;32m     92\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "\u001b[0;31mComputeTargetException\u001b[0m: ComputeTargetException:\n\tMessage: ComputeTargetNotFound: Compute Target with name ndeg-prj1-clust not found in provided workspace\n\tInnerException None\n\tErrorResponse \n{\n    \"error\": {\n        \"message\": \"ComputeTargetNotFound: Compute Target with name ndeg-prj1-clust not found in provided workspace\"\n    }\n}",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [2]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m ComputeTargetException:\n\u001b[1;32m     18\u001b[0m     compute_config \u001b[38;5;241m=\u001b[39m AmlCompute\u001b[38;5;241m.\u001b[39mprovisioning_configuration(vm_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSTANDARD_D2_V2\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m     19\u001b[0m                                                            max_nodes\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m4\u001b[39m)\n\u001b[0;32m---> 20\u001b[0m     aml_compute \u001b[38;5;241m=\u001b[39m ComputeTarget\u001b[38;5;241m.\u001b[39mcreate(ws, \u001b[43mamlcompute_cluster_name\u001b[49m, compute_config)\n\u001b[1;32m     22\u001b[0m aml_compute\u001b[38;5;241m.\u001b[39mwait_for_completion(show_output\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'amlcompute_cluster_name' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "InProgress.......\n",
+      "SucceededProvisioning operation finished, operation \"Succeeded\"\n",
+      "Succeeded\n",
+      "AmlCompute wait for completion finished\n",
+      "\n",
+      "Minimum number of nodes requested have been provisioned\n"
      ]
     }
    ],
@@ -199,21 +195,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['age', 'job', 'marital', 'education', 'default', 'housing', 'loan',\n",
-      "       'contact', 'month', 'day_of_week', 'duration', 'campaign', 'pdays',\n",
-      "       'previous', 'poutcome', 'emp.var.rate', 'cons.price.idx',\n",
-      "       'cons.conf.idx', 'euribor3m', 'nr.employed', 'y'],\n",
-      "      dtype='object')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from azureml.data.dataset_factory import TabularDatasetFactory\n",
     "\n",
@@ -223,14 +207,12 @@
     "\n",
     "### YOUR CODE HERE ###\n",
     "\n",
-    "ds = TabularDatasetFactory.from_delimited_files('https://automlsamplenotebookdata.blob.core.windows.net/automl-sample-notebook-data/bankmarketing_train.csv')\n",
-    "df = ds.to_pandas_dataframe()\n",
-    "print(df.columns)"
+    "ds = TabularDatasetFactory.from_delimited_files('https://automlsamplenotebookdata.blob.core.windows.net/automl-sample-notebook-data/bankmarketing_train.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "gather": {
      "logged": 1598275726969
@@ -250,12 +232,33 @@
     "from train import clean_data\n",
     "\n",
     "# Use the clean_data function to clean your data.\n",
-    "x, y = clean_data(### YOUR DATA OBJECT HERE ###)"
+    "x, y = clean_data(ds)\n",
+    "x['Label'] = y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.frame.DataFrame"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {
     "gather": {
      "logged": 1598275665403
@@ -280,16 +283,17 @@
     "# Azure tenant, which will incur personal costs.\n",
     "automl_config = AutoMLConfig(\n",
     "    experiment_timeout_minutes=30,\n",
-    "    task=,\n",
-    "    primary_metric=,\n",
-    "    training_data=,\n",
-    "    label_column_name=,\n",
-    "    n_cross_validations=)"
+    "    task='classification',\n",
+    "    primary_metric='accuracy',\n",
+    "    training_data=x,\n",
+    "    label_column_name='Label',\n",
+    "    n_cross_validations=5,\n",
+    "    compute_target=aml_compute)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false,
@@ -301,11 +305,30 @@
      }
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ConfigException",
+     "evalue": "ConfigException:\n\tMessage: Input of type '<class 'pandas.core.frame.DataFrame'>' is not supported. Supported types: [azureml.data.tabular_dataset.TabularDataset]Please refer to documentation for converting to Supported types: https://docs.microsoft.com/en-us/python/api/azureml-core/azureml.core.dataset.dataset?view=azure-ml-py\n\tInnerException: None\n\tErrorResponse \n{\n    \"error\": {\n        \"code\": \"UserError\",\n        \"message\": \"Input of type '<class 'pandas.core.frame.DataFrame'>' is not supported. Supported types: [azureml.data.tabular_dataset.TabularDataset]Please refer to documentation for converting to Supported types: https://docs.microsoft.com/en-us/python/api/azureml-core/azureml.core.dataset.dataset?view=azure-ml-py\",\n        \"details_uri\": \"https://aka.ms/AutoMLConfig\",\n        \"target\": \"training_data\",\n        \"inner_error\": {\n            \"code\": \"BadArgument\",\n            \"inner_error\": {\n                \"code\": \"ArgumentInvalid\",\n                \"inner_error\": {\n                    \"code\": \"InvalidInputDatatype\"\n                }\n            }\n        }\n    }\n}",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mConfigException\u001b[0m                           Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [10]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Submit your automl run\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m### YOUR CODE HERE ###\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m remote_run \u001b[38;5;241m=\u001b[39m \u001b[43mexp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msubmit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mautoml_config\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      6\u001b[0m remote_run\u001b[38;5;241m.\u001b[39mwait_for_completion(show_output\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "File \u001b[0;32m/anaconda/envs/azureml_py38/lib/python3.8/site-packages/azureml/_jupyter_common/__init__.py:86\u001b[0m, in \u001b[0;36m_experiment_submit_notebook_decorator.<locals>.submit\u001b[0;34m(self, config, tags, **kwargs)\u001b[0m\n\u001b[1;32m     85\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msubmit\u001b[39m(\u001b[38;5;28mself\u001b[39m, config, tags\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[0;32m---> 86\u001b[0m     run \u001b[38;5;241m=\u001b[39m \u001b[43moriginal_submit\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mconfig\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtags\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     87\u001b[0m     _update_run_created_from(run)\n\u001b[1;32m     88\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m run\n",
+      "File \u001b[0;32m/anaconda/envs/azureml_py38/lib/python3.8/site-packages/azureml/core/experiment.py:220\u001b[0m, in \u001b[0;36mExperiment.submit\u001b[0;34m(self, config, tags, **kwargs)\u001b[0m\n\u001b[1;32m    218\u001b[0m submit_func \u001b[38;5;241m=\u001b[39m get_experiment_submit(config)\n\u001b[1;32m    219\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_log_context(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msubmit config \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(config\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__class__\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m)):\n\u001b[0;32m--> 220\u001b[0m     run \u001b[38;5;241m=\u001b[39m \u001b[43msubmit_func\u001b[49m\u001b[43m(\u001b[49m\u001b[43mconfig\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mworkspace\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mname\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    221\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m tags \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    222\u001b[0m     run\u001b[38;5;241m.\u001b[39mset_tags(tags)\n",
+      "File \u001b[0;32m/anaconda/envs/azureml_py38/lib/python3.8/site-packages/azureml/train/automl/automlconfig.py:88\u001b[0m, in \u001b[0;36m_automl_static_submit\u001b[0;34m(automl_config_object, workspace, experiment_name, **kwargs)\u001b[0m\n\u001b[1;32m     85\u001b[0m run_config \u001b[38;5;241m=\u001b[39m automl_config_object\u001b[38;5;241m.\u001b[39m_run_configuration\n\u001b[1;32m     86\u001b[0m compute_target \u001b[38;5;241m=\u001b[39m automl_config_object\u001b[38;5;241m.\u001b[39muser_settings\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcompute_target\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m---> 88\u001b[0m \u001b[43mautoml_config_object\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_validate_config_settings\u001b[49m\u001b[43m(\u001b[49m\u001b[43mworkspace\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     89\u001b[0m fit_params \u001b[38;5;241m=\u001b[39m automl_config_object\u001b[38;5;241m.\u001b[39m_get_fit_params()\n\u001b[1;32m     91\u001b[0m \u001b[38;5;66;03m# retrieve settings which are present in user but not part of fit_params\u001b[39;00m\n",
+      "File \u001b[0;32m/anaconda/envs/azureml_py38/lib/python3.8/site-packages/azureml/train/automl/automlconfig.py:2164\u001b[0m, in \u001b[0;36mAutoMLConfig._validate_config_settings\u001b[0;34m(self, workspace)\u001b[0m\n\u001b[1;32m   2161\u001b[0m         input_type \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mstr\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39muser_settings\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtraining_data\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__class__\u001b[39m)\n\u001b[1;32m   2162\u001b[0m         target \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtraining_data\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m-> 2164\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m ConfigException\u001b[38;5;241m.\u001b[39m_with_error(\n\u001b[1;32m   2165\u001b[0m         AzureMLError\u001b[38;5;241m.\u001b[39mcreate(\n\u001b[1;32m   2166\u001b[0m             InvalidInputDatatype, target\u001b[38;5;241m=\u001b[39mtarget, input_type\u001b[38;5;241m=\u001b[39minput_type,\n\u001b[1;32m   2167\u001b[0m             supported_types\u001b[38;5;241m=\u001b[39mSupportedInputDatatypes\u001b[38;5;241m.\u001b[39mTABULAR_DATASET\n\u001b[1;32m   2168\u001b[0m         )\n\u001b[1;32m   2169\u001b[0m     )\n\u001b[1;32m   2170\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m workspace \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m compute_target \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m   2171\u001b[0m     all_compute_targets \u001b[38;5;241m=\u001b[39m workspace\u001b[38;5;241m.\u001b[39mcompute_targets\n",
+      "\u001b[0;31mConfigException\u001b[0m: ConfigException:\n\tMessage: Input of type '<class 'pandas.core.frame.DataFrame'>' is not supported. Supported types: [azureml.data.tabular_dataset.TabularDataset]Please refer to documentation for converting to Supported types: https://docs.microsoft.com/en-us/python/api/azureml-core/azureml.core.dataset.dataset?view=azure-ml-py\n\tInnerException: None\n\tErrorResponse \n{\n    \"error\": {\n        \"code\": \"UserError\",\n        \"message\": \"Input of type '<class 'pandas.core.frame.DataFrame'>' is not supported. Supported types: [azureml.data.tabular_dataset.TabularDataset]Please refer to documentation for converting to Supported types: https://docs.microsoft.com/en-us/python/api/azureml-core/azureml.core.dataset.dataset?view=azure-ml-py\",\n        \"details_uri\": \"https://aka.ms/AutoMLConfig\",\n        \"target\": \"training_data\",\n        \"inner_error\": {\n            \"code\": \"BadArgument\",\n            \"inner_error\": {\n                \"code\": \"ArgumentInvalid\",\n                \"inner_error\": {\n                    \"code\": \"InvalidInputDatatype\"\n                }\n            }\n        }\n    }\n}"
+     ]
+    }
+   ],
    "source": [
     "# Submit your automl run\n",
     "\n",
-    "### YOUR CODE HERE ###"
+    "### YOUR CODE HERE ###\n",
+    "\n",
+    "remote_run = exp.submit(automl_config)\n",
+    "remote_run.wait_for_completion(show_output=True)"
    ]
   },
   {
