Added usage of dataset by train script

--- a/udacity-project.ipynb
+++ b/udacity-project.ipynb
@@ -13,10 +13,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Workspace name: quick-starts-ws-186830\n",
+      "Workspace name: quick-starts-ws-187279\n",
       "Azure region: southcentralus\n",
-      "Subscription id: 3e42d11f-d64d-4173-af9b-12ecaa1030b3\n",
-      "Resource group: aml-quickstarts-186830\n"
+      "Subscription id: 81cefad3-d2c9-4f77-a466-99a7f541c7bb\n",
+      "Resource group: aml-quickstarts-187279\n"
      ]
     }
    ],
@@ -36,9 +36,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validating arguments.\n",
+      "Arguments validated.\n",
+      "Successfully obtained datastore reference and path.\n",
+      "Uploading file to managed-dataset/0fa2f4c1-d11e-41b9-a7f7-6b896415f2e1/\n",
+      "Successfully uploaded file to datastore.\n",
+      "Creating and registering a new dataset.\n",
+      "Successfully created and registered a new dataset.\n"
+     ]
+    }
+   ],
    "source": [
     "# Prepare data - need to insert it here!\n",
     "\n",
@@ -47,12 +61,14 @@
     "from train import clean_data\n",
     "from azureml.core import Datastore, Dataset\n",
     "\n",
+    "ds = None\n",
+    "\n",
     "try:\n",
     "    ds = Dataset.get_by_name(ws, 'bankmarketing')\n",
     "    \n",
     "except UserErrorException:\n",
     "    table_ds = TabularDatasetFactory.from_delimited_files('https://automlsamplenotebookdata.blob.core.windows.net/automl-sample-notebook-data/bankmarketing_train.csv')\n",
-    "    x, y = clean_data(ds)\n",
+    "    x, y = clean_data(table_ds)\n",
     "    x['Label'] = y\n",
     "    datastore = Datastore.get(ws, 'workspaceblobstore')\n",
     "    ds = Dataset.Tabular.register_pandas_dataframe(x, datastore, 'bankmarketing', show_progress=True)\n",
@@ -61,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "gather": {
      "logged": 1598275788675
@@ -81,7 +97,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "InProgress.....\n",
+      "InProgress.\n",
       "SucceededProvisioning operation finished, operation \"Succeeded\"\n",
       "Succeeded\n",
       "AmlCompute wait for completion finished\n",
@@ -112,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "gather": {
      "logged": 1598275789986
@@ -139,8 +155,6 @@
     "from azureml.core import Environment, ScriptRunConfig\n",
     "import os\n",
     "\n",
-    "### YOUR CODE HERE ###\n",
-    "\n",
     "# Specify parameter sampler\n",
     "ps = RandomParameterSampling( {\n",
     "    '--C': uniform(0.01, 1.0),\n",
@@ -160,7 +174,6 @@
     "src = ScriptRunConfig(\n",
     "    source_directory=\".\",\n",
     "    script=\"train.py\",\n",
-    "    #arguments=args,\n",
     "    compute_target=aml_compute,\n",
     "    environment=sklearn_env\n",
     ")\n",
@@ -169,21 +182,50 @@
     "hyperdrive_config = HyperDriveConfig(run_config=src,\n",
     "    hyperparameter_sampling=ps,\n",
     "    policy=policy,\n",
-    "    primary_metric_name='r2_score',\n",
-    "    primary_metric_goal=PrimaryMetricGoal.MINIMIZE,\n",
+    "    primary_metric_name='accuracy',\n",
+    "    primary_metric_goal=PrimaryMetricGoal.MAXIMIZE,\n",
     "    max_total_runs=20,\n",
     "    max_concurrent_runs=4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RunId: HD_9f76f9dd-047b-4456-9ee0-988f45ce8a79\n",
+      "Web View: https://ml.azure.com/runs/HD_9f76f9dd-047b-4456-9ee0-988f45ce8a79?wsid=/subscriptions/81cefad3-d2c9-4f77-a466-99a7f541c7bb/resourcegroups/aml-quickstarts-187279/workspaces/quick-starts-ws-187279&tid=660b3398-b80e-49d2-bc5b-ac1dc93b5254\n",
+      "\n",
+      "Streaming azureml-logs/hyperdrive.txt\n",
+      "=====================================\n",
+      "\n",
+      "\"<START>[2022-02-22T09:43:02.525493][API][INFO]Experiment created<END>\\n\"\"<START>[2022-02-22T09:43:03.330524][GENERATOR][INFO]Trying to sample '4' jobs from the hyperparameter space<END>\\n\"\"<START>[2022-02-22T09:43:03.974491][GENERATOR][INFO]Successfully sampled '4' jobs, they will soon be submitted to the execution target.<END>\\n\"\n"
+     ]
+    },
+    {
+     "ename": "ExperimentExecutionException",
+     "evalue": "ExperimentExecutionException:\n\tMessage: The output streaming for the run interrupted.\nBut the run is still executing on the compute target. \nDetails for canceling the run can be found here: https://aka.ms/aml-docs-cancel-run\n\tInnerException None\n\tErrorResponse \n{\n    \"error\": {\n        \"message\": \"The output streaming for the run interrupted.\\nBut the run is still executing on the compute target. \\nDetails for canceling the run can be found here: https://aka.ms/aml-docs-cancel-run\"\n    }\n}",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "File \u001b[0;32m/anaconda/envs/azureml_py38/lib/python3.8/site-packages/azureml/core/run.py:841\u001b[0m, in \u001b[0;36mRun.wait_for_completion\u001b[0;34m(self, show_output, wait_post_processing, raise_on_error)\u001b[0m\n\u001b[1;32m    840\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 841\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_stream_run_output\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    842\u001b[0m \u001b[43m        \u001b[49m\u001b[43mfile_handle\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43msys\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstdout\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    843\u001b[0m \u001b[43m        \u001b[49m\u001b[43mwait_post_processing\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mwait_post_processing\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    844\u001b[0m \u001b[43m        \u001b[49m\u001b[43mraise_on_error\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mraise_on_error\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    845\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mget_details()\n",
+      "File \u001b[0;32m/anaconda/envs/azureml_py38/lib/python3.8/site-packages/azureml/core/run.py:1032\u001b[0m, in \u001b[0;36mRun._stream_run_output\u001b[0;34m(self, file_handle, wait_post_processing, raise_on_error)\u001b[0m\n\u001b[1;32m   1031\u001b[0m file_handle\u001b[38;5;241m.\u001b[39mflush()\n\u001b[0;32m-> 1032\u001b[0m \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[43mRun\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_wait_before_polling\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtime\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mpoll_start_time\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1033\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_current_details \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mget_details()  \u001b[38;5;66;03m# TODO use FileWatcher\u001b[39;00m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: ",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mExperimentExecutionException\u001b[0m              Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [7]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Submit your hyperdrive run to the experiment and show run details with the widget.\u001b[39;00m\n\u001b[1;32m      2\u001b[0m run \u001b[38;5;241m=\u001b[39m exp\u001b[38;5;241m.\u001b[39msubmit(config\u001b[38;5;241m=\u001b[39mhyperdrive_config)\n\u001b[0;32m----> 3\u001b[0m \u001b[43mrun\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwait_for_completion\u001b[49m\u001b[43m(\u001b[49m\u001b[43mshow_output\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/anaconda/envs/azureml_py38/lib/python3.8/site-packages/azureml/core/run.py:852\u001b[0m, in \u001b[0;36mRun.wait_for_completion\u001b[0;34m(self, show_output, wait_post_processing, raise_on_error)\u001b[0m\n\u001b[1;32m    846\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m:\n\u001b[1;32m    847\u001b[0m         error_message \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe output streaming for the run interrupted.\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m \\\n\u001b[1;32m    848\u001b[0m                         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBut the run is still executing on the compute target. \u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m \\\n\u001b[1;32m    849\u001b[0m                         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDetails for canceling the run can be found here: \u001b[39m\u001b[38;5;124m\"\u001b[39m \\\n\u001b[1;32m    850\u001b[0m                         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhttps://aka.ms/aml-docs-cancel-run\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m--> 852\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m ExperimentExecutionException(error_message)\n\u001b[1;32m    853\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    854\u001b[0m     running_states \u001b[38;5;241m=\u001b[39m RUNNING_STATES\n",
+      "\u001b[0;31mExperimentExecutionException\u001b[0m: ExperimentExecutionException:\n\tMessage: The output streaming for the run interrupted.\nBut the run is still executing on the compute target. \nDetails for canceling the run can be found here: https://aka.ms/aml-docs-cancel-run\n\tInnerException None\n\tErrorResponse \n{\n    \"error\": {\n        \"message\": \"The output streaming for the run interrupted.\\nBut the run is still executing on the compute target. \\nDetails for canceling the run can be found here: https://aka.ms/aml-docs-cancel-run\"\n    }\n}"
+     ]
+    }
+   ],
    "source": [
     "# Submit your hyperdrive run to the experiment and show run details with the widget.\n",
-    "\n",
-    "### YOUR CODE HERE ###\n",
     "run = exp.submit(config=hyperdrive_config)\n",
     "run.wait_for_completion(show_output=True)"
    ]
@@ -210,7 +252,13 @@
     "import joblib\n",
     "# Get your best run and save the model from that run.\n",
     "\n",
-    "### YOUR CODE HERE ###"
+    "best_run = exp.get_best_run_by_primary_metric()\n",
+    "best_run_metrics = best_run.get_metrics()\n",
+    "parameter_values = best_run.get_details()['runDefinition']['Arguments']\n",
+    "\n",
+    "print('Best run ID:', best_run.id)\n",
+    "print('\\n Accuracy:', best_run_metrics['accuracy'])\n",
+    "print('\\n Parameters:', parameter_values)"
    ]
   },
   {
@@ -234,10 +282,6 @@
    "source": [
     "from azureml.train.automl import AutoMLConfig\n",
     "\n",
-    "# Set parameters for AutoMLConfig\n",
-    "# NOTE: DO NOT CHANGE THE experiment_timeout_minutes PARAMETER OR YOUR INSTANCE WILL TIME OUT.\n",
-    "# If you wish to run the experiment longer, you will need to run this notebook in your own\n",
-    "# Azure tenant, which will incur personal costs.\n",
     "automl_config = AutoMLConfig(\n",
     "    experiment_timeout_minutes=30,\n",
     "    task='classification',\n",
@@ -435,8 +479,8 @@
     "\n",
     "### YOUR CODE HERE ###\n",
     "\n",
-    "remote_run = exp.submit(automl_config)\n",
-    "remote_run.wait_for_completion(show_output=True)"
+    "remote_run = exp.submit(automl_config, show_output=True)\n",
+    "remote_run.wait_for_completion()"
    ]
   },
   {
