--- a/udacity-project.ipynb
+++ b/udacity-project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "gather": {
      "logged": 1598275788035
@@ -13,10 +13,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Workspace name: quick-starts-ws-187279\n",
+      "Workspace name: quick-starts-ws-187362\n",
       "Azure region: southcentralus\n",
-      "Subscription id: 81cefad3-d2c9-4f77-a466-99a7f541c7bb\n",
-      "Resource group: aml-quickstarts-187279\n"
+      "Subscription id: a24a24d5-8d87-4c8a-99b6-91ed2d2df51f\n",
+      "Resource group: aml-quickstarts-187362\n"
      ]
     }
    ],
@@ -36,48 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validating arguments.\n",
-      "Arguments validated.\n",
-      "Successfully obtained datastore reference and path.\n",
-      "Uploading file to managed-dataset/0fa2f4c1-d11e-41b9-a7f7-6b896415f2e1/\n",
-      "Successfully uploaded file to datastore.\n",
-      "Creating and registering a new dataset.\n",
-      "Successfully created and registered a new dataset.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Prepare data - need to insert it here!\n",
-    "\n",
-    "from azureml.exceptions import UserErrorException\n",
-    "from azureml.data.dataset_factory import TabularDatasetFactory\n",
-    "from train import clean_data\n",
-    "from azureml.core import Datastore, Dataset\n",
-    "\n",
-    "ds = None\n",
-    "\n",
-    "try:\n",
-    "    ds = Dataset.get_by_name(ws, 'bankmarketing')\n",
-    "    \n",
-    "except UserErrorException:\n",
-    "    table_ds = TabularDatasetFactory.from_delimited_files('https://automlsamplenotebookdata.blob.core.windows.net/automl-sample-notebook-data/bankmarketing_train.csv')\n",
-    "    x, y = clean_data(table_ds)\n",
-    "    x['Label'] = y\n",
-    "    datastore = Datastore.get(ws, 'workspaceblobstore')\n",
-    "    ds = Dataset.Tabular.register_pandas_dataframe(x, datastore, 'bankmarketing', show_progress=True)\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "gather": {
      "logged": 1598275788675
@@ -97,8 +56,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "InProgress.\n",
-      "SucceededProvisioning operation finished, operation \"Succeeded\"\n",
+      "Found existing cluster, use it.\n",
       "Succeeded\n",
       "AmlCompute wait for completion finished\n",
       "\n",
@@ -108,11 +66,9 @@
    ],
    "source": [
     "from azureml.core.compute import ComputeTarget, AmlCompute\n",
+    "from azureml.core.compute_target import ComputeTargetException\n",
     "\n",
     "cluster_name = \"ndeg-prj1-clust\"\n",
-    "\n",
-    "from azureml.core.compute import ComputeTarget, AmlCompute\n",
-    "from azureml.core.compute_target import ComputeTargetException\n",
     "\n",
     "try:\n",
     "    aml_compute = ComputeTarget(workspace=ws, name=cluster_name)\n",
@@ -128,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "gather": {
      "logged": 1598275789986
@@ -190,38 +146,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RunId: HD_9f76f9dd-047b-4456-9ee0-988f45ce8a79\n",
-      "Web View: https://ml.azure.com/runs/HD_9f76f9dd-047b-4456-9ee0-988f45ce8a79?wsid=/subscriptions/81cefad3-d2c9-4f77-a466-99a7f541c7bb/resourcegroups/aml-quickstarts-187279/workspaces/quick-starts-ws-187279&tid=660b3398-b80e-49d2-bc5b-ac1dc93b5254\n",
+      "RunId: HD_35df17b1-014c-45df-83cb-584b5687002f\n",
+      "Web View: https://ml.azure.com/runs/HD_35df17b1-014c-45df-83cb-584b5687002f?wsid=/subscriptions/a24a24d5-8d87-4c8a-99b6-91ed2d2df51f/resourcegroups/aml-quickstarts-187362/workspaces/quick-starts-ws-187362&tid=660b3398-b80e-49d2-bc5b-ac1dc93b5254\n",
       "\n",
       "Streaming azureml-logs/hyperdrive.txt\n",
       "=====================================\n",
       "\n",
-      "\"<START>[2022-02-22T09:43:02.525493][API][INFO]Experiment created<END>\\n\"\"<START>[2022-02-22T09:43:03.330524][GENERATOR][INFO]Trying to sample '4' jobs from the hyperparameter space<END>\\n\"\"<START>[2022-02-22T09:43:03.974491][GENERATOR][INFO]Successfully sampled '4' jobs, they will soon be submitted to the execution target.<END>\\n\"\n"
+      "\"<START>[2022-02-23T08:52:59.387932][API][INFO]Experiment created<END>\\n\"\"<START>[2022-02-23T08:53:01.431294][GENERATOR][INFO]Trying to sample '4' jobs from the hyperparameter space<END>\\n\"\"<START>[2022-02-23T08:53:02.208188][GENERATOR][INFO]Successfully sampled '4' jobs, they will soon be submitted to the execution target.<END>\\n\"\n",
+      "\n",
+      "Execution Summary\n",
+      "=================\n",
+      "RunId: HD_35df17b1-014c-45df-83cb-584b5687002f\n",
+      "Web View: https://ml.azure.com/runs/HD_35df17b1-014c-45df-83cb-584b5687002f?wsid=/subscriptions/a24a24d5-8d87-4c8a-99b6-91ed2d2df51f/resourcegroups/aml-quickstarts-187362/workspaces/quick-starts-ws-187362&tid=660b3398-b80e-49d2-bc5b-ac1dc93b5254\n",
+      "\n"
      ]
     },
     {
-     "ename": "ExperimentExecutionException",
-     "evalue": "ExperimentExecutionException:\n\tMessage: The output streaming for the run interrupted.\nBut the run is still executing on the compute target. \nDetails for canceling the run can be found here: https://aka.ms/aml-docs-cancel-run\n\tInnerException None\n\tErrorResponse \n{\n    \"error\": {\n        \"message\": \"The output streaming for the run interrupted.\\nBut the run is still executing on the compute target. \\nDetails for canceling the run can be found here: https://aka.ms/aml-docs-cancel-run\"\n    }\n}",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "File \u001b[0;32m/anaconda/envs/azureml_py38/lib/python3.8/site-packages/azureml/core/run.py:841\u001b[0m, in \u001b[0;36mRun.wait_for_completion\u001b[0;34m(self, show_output, wait_post_processing, raise_on_error)\u001b[0m\n\u001b[1;32m    840\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 841\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_stream_run_output\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    842\u001b[0m \u001b[43m        \u001b[49m\u001b[43mfile_handle\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43msys\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstdout\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    843\u001b[0m \u001b[43m        \u001b[49m\u001b[43mwait_post_processing\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mwait_post_processing\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    844\u001b[0m \u001b[43m        \u001b[49m\u001b[43mraise_on_error\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mraise_on_error\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    845\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mget_details()\n",
-      "File \u001b[0;32m/anaconda/envs/azureml_py38/lib/python3.8/site-packages/azureml/core/run.py:1032\u001b[0m, in \u001b[0;36mRun._stream_run_output\u001b[0;34m(self, file_handle, wait_post_processing, raise_on_error)\u001b[0m\n\u001b[1;32m   1031\u001b[0m file_handle\u001b[38;5;241m.\u001b[39mflush()\n\u001b[0;32m-> 1032\u001b[0m \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[43mRun\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_wait_before_polling\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtime\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mpoll_start_time\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1033\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_current_details \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mget_details()  \u001b[38;5;66;03m# TODO use FileWatcher\u001b[39;00m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: ",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mExperimentExecutionException\u001b[0m              Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [7]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Submit your hyperdrive run to the experiment and show run details with the widget.\u001b[39;00m\n\u001b[1;32m      2\u001b[0m run \u001b[38;5;241m=\u001b[39m exp\u001b[38;5;241m.\u001b[39msubmit(config\u001b[38;5;241m=\u001b[39mhyperdrive_config)\n\u001b[0;32m----> 3\u001b[0m \u001b[43mrun\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwait_for_completion\u001b[49m\u001b[43m(\u001b[49m\u001b[43mshow_output\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m/anaconda/envs/azureml_py38/lib/python3.8/site-packages/azureml/core/run.py:852\u001b[0m, in \u001b[0;36mRun.wait_for_completion\u001b[0;34m(self, show_output, wait_post_processing, raise_on_error)\u001b[0m\n\u001b[1;32m    846\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m:\n\u001b[1;32m    847\u001b[0m         error_message \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe output streaming for the run interrupted.\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m \\\n\u001b[1;32m    848\u001b[0m                         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBut the run is still executing on the compute target. \u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m \\\n\u001b[1;32m    849\u001b[0m                         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDetails for canceling the run can be found here: \u001b[39m\u001b[38;5;124m\"\u001b[39m \\\n\u001b[1;32m    850\u001b[0m                         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhttps://aka.ms/aml-docs-cancel-run\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m--> 852\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m ExperimentExecutionException(error_message)\n\u001b[1;32m    853\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    854\u001b[0m     running_states \u001b[38;5;241m=\u001b[39m RUNNING_STATES\n",
-      "\u001b[0;31mExperimentExecutionException\u001b[0m: ExperimentExecutionException:\n\tMessage: The output streaming for the run interrupted.\nBut the run is still executing on the compute target. \nDetails for canceling the run can be found here: https://aka.ms/aml-docs-cancel-run\n\tInnerException None\n\tErrorResponse \n{\n    \"error\": {\n        \"message\": \"The output streaming for the run interrupted.\\nBut the run is still executing on the compute target. \\nDetails for canceling the run can be found here: https://aka.ms/aml-docs-cancel-run\"\n    }\n}"
-     ]
+     "data": {
+      "text/plain": [
+       "{'runId': 'HD_35df17b1-014c-45df-83cb-584b5687002f',\n",
+       " 'target': 'ndeg-prj1-clust',\n",
+       " 'status': 'Completed',\n",
+       " 'startTimeUtc': '2022-02-23T08:52:59.095515Z',\n",
+       " 'endTimeUtc': '2022-02-23T09:03:40.62567Z',\n",
+       " 'services': {},\n",
+       " 'properties': {'primary_metric_config': '{\"name\": \"accuracy\", \"goal\": \"maximize\"}',\n",
+       "  'resume_from': 'null',\n",
+       "  'runTemplate': 'HyperDrive',\n",
+       "  'azureml.runsource': 'hyperdrive',\n",
+       "  'platform': 'AML',\n",
+       "  'ContentSnapshotId': '125a4fe2-b2dc-4b09-a69e-8901a5c57c1c',\n",
+       "  'user_agent': 'python/3.8.1 (Linux-5.4.0-1068-azure-x86_64-with-glibc2.10) msrest/0.6.21 Hyperdrive.Service/1.0.0 Hyperdrive.SDK/core.1.38.0',\n",
+       "  'space_size': 'infinite_space_size',\n",
+       "  'score': '0.9140150818466066',\n",
+       "  'best_child_run_id': 'HD_35df17b1-014c-45df-83cb-584b5687002f_5',\n",
+       "  'best_metric_status': 'Succeeded'},\n",
+       " 'inputDatasets': [],\n",
+       " 'outputDatasets': [],\n",
+       " 'logFiles': {'azureml-logs/hyperdrive.txt': 'https://mlstrg187362.blob.core.windows.net/azureml/ExperimentRun/dcid.HD_35df17b1-014c-45df-83cb-584b5687002f/azureml-logs/hyperdrive.txt?sv=2019-07-07&sr=b&sig=IjCi2MyA2wec4Rp6eHOHA%2BSakGix2%2FZgij%2Fsbctxcgc%3D&skoid=77f454f2-a700-4ee2-b1b5-31d8a6d09470&sktid=660b3398-b80e-49d2-bc5b-ac1dc93b5254&skt=2022-02-23T08%3A14%3A57Z&ske=2022-02-24T16%3A24%3A57Z&sks=b&skv=2019-07-07&st=2022-02-23T08%3A54%3A40Z&se=2022-02-23T17%3A04%3A40Z&sp=r'},\n",
+       " 'submittedBy': 'ODL_User 187362'}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -232,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "gather": {
      "logged": 1598276310862
@@ -245,20 +220,72 @@
      "transient": {
       "deleting": false
      }
-    }
+    },
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best run ID: HD_35df17b1-014c-45df-83cb-584b5687002f_5\n",
+      "Accuracy: 0.9140150818466066\n",
+      "Parameters: ['--C', '0.5438089918805208', '--max_iter', '1000']\n"
+     ]
+    }
+   ],
    "source": [
     "import joblib\n",
     "# Get your best run and save the model from that run.\n",
     "\n",
-    "best_run = exp.get_best_run_by_primary_metric()\n",
+    "best_run = run.get_best_run_by_primary_metric()\n",
     "best_run_metrics = best_run.get_metrics()\n",
-    "parameter_values = best_run.get_details()['runDefinition']['Arguments']\n",
+    "parameter_values = best_run.get_details()['runDefinition']['arguments']\n",
     "\n",
     "print('Best run ID:', best_run.id)\n",
-    "print('\\n Accuracy:', best_run_metrics['accuracy'])\n",
-    "print('\\n Parameters:', parameter_values)"
+    "print('Accuracy:', best_run_metrics['accuracy'])\n",
+    "print('Parameters:', parameter_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validating arguments.\n",
+      "Arguments validated.\n",
+      "Successfully obtained datastore reference and path.\n",
+      "Uploading file to managed-dataset/0fa2f4c1-d11e-41b9-a7f7-6b896415f2e1/\n",
+      "Successfully uploaded file to datastore.\n",
+      "Creating and registering a new dataset.\n",
+      "Successfully created and registered a new dataset.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Prepare data - need to insert it here!\n",
+    "\n",
+    "from azureml.exceptions import UserErrorException\n",
+    "from azureml.data.dataset_factory import TabularDatasetFactory\n",
+    "from train import clean_data\n",
+    "from azureml.core import Datastore, Dataset\n",
+    "\n",
+    "ds = None\n",
+    "\n",
+    "try:\n",
+    "    ds = Dataset.get_by_name(ws, 'bankmarketing')\n",
+    "    \n",
+    "except UserErrorException:\n",
+    "    table_ds = TabularDatasetFactory.from_delimited_files('https://automlsamplenotebookdata.blob.core.windows.net/automl-sample-notebook-data/bankmarketing_train.csv')\n",
+    "    x, y = clean_data(table_ds)\n",
+    "    x['Label'] = y\n",
+    "    datastore = Datastore.get(ws, 'workspaceblobstore')\n",
+    "    ds = Dataset.Tabular.register_pandas_dataframe(x, datastore, 'bankmarketing', show_progress=True)\n",
+    "    "
    ]
   },
   {
